add muParser to read a function from a file and rm .o file

--- a/firstAssignment/Makefile
+++ b/firstAssignment/Makefile
@@ -10,7 +10,9 @@ exe_sources=$(filter main%.cpp,$(SRCS))
 EXEC=$(exe_sources:.cpp=)
 
 CXXFLAGS+=-I/home/jellyfish/shared-folder/Examples/src/LinearAlgebraUti -I/home/jellyfish/shared-folder/Examples/include/
+
 #-----------------------------------------------
+
 .phony= all clean
 
 .DEFAULT_GOAL = all
@@ -19,15 +21,8 @@ all: $(EXEC)
 
 clean:
 	rm -f $(EXEC) $(OBJS)
-	
+
 $(EXEC): $(OBJS)
-	g++ -o main $(OBJS)
+	g++ -o main $(OBJS) -L/home/jellyfish/shared-folder/Examples/lib -lmuparser -Wl,-rpath=/home/jellyfish/shared-folder/Examples/lib
 
 $(OBJS): $(SRCS) $(HEADERS)
-
-
-
-
-
-
-
