--- a/firstAssignment/src/Makefile
+++ b/firstAssignment/src/Makefile
@@ -7,7 +7,6 @@ CXXFLAGS += -std=c++20 -DCONVERGENCE_RATE=7 -Wall -Wextra -I../Include/ -I../Inc
 LDFLAGS += -Wl,-rpath=../../../Examples/lib  # you should change these paths with your local paths 								    to link against muparser library
 LDLIBS += -L../../../Examples/lib -lmuparser # to link against muparser library
 
-
 LINK.o = $(CXX) $(LDFLAGS) $(TARGET_ARCH)
 
 # get all files *.cpp
@@ -20,19 +19,25 @@ OBJS := $(SRCS:.cpp=.o)
 exe_sources = $(filter main%.cpp,$(SRCS))
 EXEC = $(exe_sources:.cpp=)
 
+# output file 
+FILE := ../result.dat ../error_rate.dat
+
 #-----------------------------------------------
 
-.PHONY: all clean
+.PHONY: all clean 
 
 .DEFAULT_GOAL = all
 
 clean:
-	$(RM) $(EXEC) $(OBJS) ../result.dat ../error_rate.dat
+	$(RM) $(EXEC) $(OBJS) $(FILE)
 	
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) $< -c
 	
 $(EXEC): $(OBJS)
-	$(LINK.o) $(LDLIBS) $(OBJS) -o main
+	$(LINK.o) $(LDLIBS) $(OBJS) -o $(EXEC)
 
 all: $(EXEC)
+
+
+
